--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 certifi==2018.4.16
 chardet==3.0.4
 defusedxml==0.5.0
-Django==2.0.5
+Django==2.0.7
 django-allauth==0.36.0
 django-cors-headers==2.2.0
 django-rest-auth==0.9.3
@@ -14,4 +14,6 @@ pytz==2018.4
 requests==2.19.1
 requests-oauthlib==1.0.0
 six==1.11.0
+style==1.1.0
+update==0.0.1
 urllib3==1.23
